Fix Wizard button overlap: override global a{overflow:hidden;position:relative} on builder link

--- a/couchpotato/static/style/settings.scss
+++ b/couchpotato/static/style/settings.scss
@@ -605,6 +605,8 @@
 	}
 
 	.apprise-builder-link {
+		overflow: visible;
+		position: static;
 		flex-shrink: 0;
 		font-size: .8em;
 		text-decoration: none;
